@@ -1,3 +1,4 @@
+ - Improved non-support for curses (--disable-curses)
  - New class MechanicalSystem for simulating mechanical systems
  - Save debug info from primal and dual (plotslab.m)
  - Fix bug in progress bar
